--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,20 +1,84 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat&family=Montserrat:wght@300;400;600;700&family=Mulish:wght@300;400;700&display=swap');
+@import './normalize.scss';
+
+body {
+    background-attachment: fixed;
+    background-image: url('../../public/images/gtamap.jpg');
+    background-position: center;
+    background-size: cover;
+    font-family: 'Mulish', sans-serif;
+    padding: 16px;
+}
+
 .VehicleList {
     display: grid;
-    gap: 5px;
+    gap: 8px;
     grid-auto-flow: row;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
 }
 
 .Vehicle {
     aspect-ratio: 200/113;
-    background-color: aqua;
+    background-color: rgb(192, 192, 192);
+    border-radius: 3px;
+    overflow: hidden;
     position: relative;
+}
+
+.Vehicle__inner {
+    aspect-ratio: 200/113;
+    position: relative;
+    z-index: 2;
 }
 
 .Vehicle__image {
     display: block;
     height: auto;
     width: 100%;
+}
+
+.Vehicle__icongroup {
+    align-items: center;
+    display: flex;
+    gap: 6px;
+    left: 0;
+    padding: 5px;
+    position: absolute;
+    top: 0;
+    width: 100%;
+}
+
+.Vehicle__icon {
+    background-color: rgba(255,255,255, .8);
+    border: 0;
+    border-radius: 50%;
+    box-shadow: 1px 1px 2px #2e2e2e;
+    box-sizing: border-box;
+    display: inline-block;
+    height: 30px;
+    padding: 5px;
+    width: 30px;
+
+    &:hover {
+        cursor: pointer;
+    }
+}
+
+.Vehicle__icon--buy {
+    align-self: flex-end;
+    background-color: rgba(236, 181, 0, 0.8);
+
+    &:hover {
+        cursor: default
+    }
+}
+
+.Vehicle__icon--fav-selected {
+    background-color: #d6025a;
+
+    .Icon__fav {
+        color: #fff;
+    }
 }
 
 .Vehicle__name {
@@ -29,4 +93,147 @@
     position: absolute;
     right: 0;
     text-shadow: 1px 1px 1px rgba(0,0,0, 0.8);
+}
+
+.sr-only {
+    clip: rect(0 0 0 0); 
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap; 
+    width: 1px;
+}
+
+.Icon__loading {
+    left: 50%;
+    margin-left: -16px;
+    margin-top: -16px;
+    position: absolute;
+    top: 50%;
+}
+
+.Icon__fav {
+    margin-top: 1px;
+}
+
+.VehicleSelect {
+    align-items: center;
+    display: flex;
+    gap: 8px;
+    margin-bottom: 16px;
+    max-width: 350px;
+}
+
+.VehicleSelect__dropdown {
+    background-color: #fff;
+    border: none;
+    flex-grow: 1;
+    padding: 8px;
+}
+
+.VehicleInfo {
+    border: none;
+    max-width: 550px;
+    padding: 0;
+    width: 100%;
+
+    &::backdrop {
+        background: rgb(46, 46, 46, 0.9);
+    }
+}
+
+.VehicleInfo__inner {
+    position: relative;
+}
+
+.VehicleInfo__stats {
+    padding: 16px;
+}
+
+.VehicleInfo__image {
+    display: block;
+    width: 100%
+}
+
+.VehicleInfo__name {
+    background-color: #242424;
+    color: #fff;
+    line-height: 1.2;
+    margin: 0;
+    padding: 16px 60px 16px 16px;
+}
+
+.VehicleInfo__type {
+    background-color: rgba(182, 182, 182, 0.8);
+    border-radius: 3px;
+    display: inline-block;
+    margin-right: 5px;
+    padding: 5px 8px;
+}
+
+.VehicleInfo__close {
+    background-color: transparent;
+    border: none;
+    color: #fff;
+    padding: 0;
+    position: absolute;
+    right: 13px;
+    top: 13px;
+
+    &:hover {
+        cursor: pointer;
+    }
+
+    .Icon {
+        width: 30px;
+    }
+}
+
+.VehicleInfo__pricing {
+    background-color: rgba(236, 181, 0, 0.8);
+    padding: 16px;
+}
+
+.VehicleInfo__price {
+    font-size: 20px;
+    margin: 8px 0;
+}
+
+.VehicleInfo__tags {
+    display: flex;
+    gap: 8px;
+    margin-top: 16px;
+}
+
+.VehicleInfo__tag {
+    background-color: rgba(182, 182, 182, 0.8);
+    border-radius: 3px;
+    display: inline-block;
+    font-size: 12px;
+    font-weight: 700;
+    padding: 3px 5px;
+}
+
+.VehicleInfo__table {
+    margin-top: 16px;
+    width: 100%;
+}
+
+.VehicleInfo__table-text {
+    font-size: 13px;
+    font-weight: 300;
+    margin-bottom: 0;
+    margin-top: 5px;
+}
+
+.VehicleInfo__table th, .VehicleInfo__table td {
+    border-bottom: 1px solid #cecece;
+    padding: 3px;
+    text-align: left;
+}
+
+.VehicleInfo__table td {
+    border-left: 1px solid #cecece;
+    text-align: center;
 }
